<resources>
    <string name="app_name">Kof</string>
    <string name="cancel">Cancel</string>
    <string name="text">Text</string>
    <string name="_0">0</string>
    <string name="add_to_db">Add to DB</string>
    <string name="cup_size">Cup Size</string>
    <string name="choose">Choose:</string>
    <string name="accept">ACCEPT</string>
    <string name="add">Add</string>
    <string name="view_all_data">View All Data</string>
    <string name="update">Update</string>
    <string name="delete">DElete</string>
    <string name="image">Image</string>
    <string name="change_image">Change Image</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="list">List</string>
    <string name="total_sum">Total sum:</string>
    <string name="insert">INSERT</string>
    <string name="ID">ID</string>
    <string name="Nazwa">Nazwa</string>
    <string name="small">small</string>
    <string name="medium">medium</string>
    <string name="large">large</string>
    <string name="moloko">moloko</string>
    <string name="vid">Вид</string>
    <string name="avtor">Авторские</string>
    <string name="Avto">Avtor</string>
    <string name="rodzaj">Rodzaj</string>
    <string name="price">Price:</string>
    <string name="_320">320</string>
    <string name="_400">400</string>
    <string name="_250">250</string>
    <string name="_500">500</string>
    <string name="_175">175</string>
    <string name="id">ID</string>
    <string name="kofe">Kofe</string>
    <string name="tea">Tea</string>
    <string name="ice">Ice</string>
    <string name="other">Other</string>
    <string name="dodatki">Dodatki</string>
    <string name="Settings">Settings</string>
    <string name="Item1">Item1</string>
    <string name="Item2">Item2</string>
    <string name="Item3">Item3</string>
    <string name="_110">110</string>
    <string name="acc">Accept</string>
    <string name="gotowka">Gotowka</string>
    <string name="a">Водяра</string>
    <string name="aa">Водяра</string>
    <string name="aaz">+</string>
    <string name="minuss">-</string>
    <string name="razy">*</string>
    <string name="delit">/</string>
    <string name="Add">+</string>
    <string name="Minus">-</string>
    <string name="Multiply">*</string>
    <string name="Divide">/</string>
    <string name="result">Result:</string>
    <string name="name">Name</string>
    <string name="cena">Cena</string>
    <string name="name_product">Name product</string>
    <string name="AcceptTowar">Accept</string>
    <string name="gone">Gone</string>
    <string name="button">Button</string>
    <string name="show_all_info">Show all info</string>
    <string name="send">Send</string>
    <string name="write_to_all_list">Write to all list</string>
    <string name="k">Кофе</string>
    <string name="t">Чай</string>
    <string name="h">Холодные</string>
    <string name="o">Другое</string>
    <string name="d">Добавки</string>
    <string name="kk">Кофе</string>
    <string name="hh">Чай</string>
    <string name="cc">Холодные</string>
    <string name="oo">Другое</string>
    <string name="dd">Добавки</string>
    <string name="cen">Цена:</string>
    <string name="naz">Название</string>
    <string name="awt">Авторское</string>
    <string name="wid">Вид</string>
    <string name="bnt">BUTTON</string>
    <string name="os">Общая сумма</string>
    <string name="ok">Оплата картой</string>
    <string name="usz">УШЕЛ</string>
    <string name="dob">Результат:</string>
    <string name="dobawit">Добавить</string>
    <string name="pokinf">Показать информацию</string>
    <string name="zapdb">Записать в базу</string>
    <string name="sendotp">Отправить</string>
    <string name="e_mail">E-mail получателя</string>
    <string name="fiksstawk">Фиксированная ставка</string>
    <string name="tekst">Tekst</string>
    <string name="check6">Форма оплаты</string>
    <string name="check5">Цена</string>
    <string name="check7">Тип</string>
    <string name="check4">Чашка</string>
    <string name="check3">Название</string>
    <string name="clear">Очистить данные</string>
    <string name="zapros">Сделать запрос</string>
    <string name="textmonth">Месяц</string>
    <string name="textgod">Год</string>
    <string name="textden">День</string>
    <string name="aug">Aug</string>
    <string name="podtw">Подтвердить</string>
    <string name="dobaw">Добавить</string>
    <string name="updateeee">Обновить</string>
    <string name="udalit">Удалить</string>
    <string name="viewallda">Показать информацию</string>
    <string name="prin">Принять</string>
    <string name="adm">Режим администраторв</string>
    <string name="smienpar">Смена пароля</string>
    <string name="priniatzak">Принять заказ</string>
    <string name="admswit">Режим администратора</string>
    <string name="nameeM">Имя работника</string>

</resources>
