<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddToDB">


    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_above="@+id/Delete"
        android:layout_alignParentStart="true"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/dobaw"
        tools:backgroundTint="@android:color/holo_green_light" />

    <Button
        android:id="@+id/ViewData"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/viewallda" />

    <Button
        android:id="@+id/Delete"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_above="@+id/ViewData"
        android:layout_alignParentStart="true"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/udalit" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/wid" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rGroupe"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/naz" />

    <RadioGroup
        android:id="@+id/rGroupe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="rbcClick"
            android:text="@string/kk"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbcClick"
            android:text="@string/hh"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbcClick"
            android:text="@string/cc"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbcClick"
            android:text="@string/oo"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbcClick"
            android:text="@string/dd"
            android:textSize="12sp" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:text="@string/awt" />


    <EditText
        android:id="@+id/editText3"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:text="@string/cen"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText5"
        android:layout_toEndOf="@+id/editText5"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText5"
        android:layout_toEndOf="@+id/editText6"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText5"
        android:layout_toEndOf="@+id/editText7"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText5"
        android:layout_toEndOf="@+id/editText8"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText5"
        android:layout_toEndOf="@+id/editText9"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText3"
        android:text="@string/_110"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/_175"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_toEndOf="@+id/editText6"
        android:text="@string/_250"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:text="@string/_320"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_toEndOf="@+id/editText"
        android:text="@string/_400"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_toEndOf="@+id/editText9"
        android:text="@string/_500"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText"
        android:layout_toEndOf="@+id/editText2"
        android:text="@string/id"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spinnerID"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_above="@+id/editText"
        android:layout_toEndOf="@+id/editText9" />

</RelativeLayout>