<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondA">

    <Button
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="110" />

    <Button
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/one"
        android:text="@string/_175" />

    <Button
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/two"
        android:text="@string/_250" />

    <Button
        android:id="@+id/four"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/three"
        android:text="@string/_320" />

    <Button
        android:id="@+id/five"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/four"
        android:text="@string/_400" />

    <Button
        android:id="@+id/six"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/five"
        android:text="@string/_500" />
</RelativeLayout>