<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Zapros">


    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerName"
        android:layout_toEndOf="@+id/textView19"
        android:text="@string/check3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerKubek"
        android:layout_alignStart="@+id/checkBox3"
        android:text="@string/check4" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerCena"
        android:layout_alignStart="@+id/checkBox3"
        android:text="@string/check5" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner2"
        android:layout_alignStart="@+id/checkBox3"
        android:text="@string/check6" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinnerKubek"
        android:layout_alignStart="@+id/checkBox3"
        android:text="@string/check7" />

    <EditText
        android:id="@+id/editText20"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/aug" />

    <EditText
        android:id="@+id/denn"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editText20"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/years"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/editText20"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText20"
        android:layout_toEndOf="@+id/checkBox3"
        android:text="@string/textgod" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText20"
        android:layout_centerHorizontal="true"
        android:text="@string/textmonth" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText20"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:text="@string/textden" />

    <Button
        android:id="@+id/Acce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/podtw" />

    <Spinner
        android:id="@+id/spinnerKubek"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerTyp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox4" />

    <Spinner
        android:id="@+id/spinnerName"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Spinner
        android:id="@+id/spinnerCena"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerName" />

    <Spinner
        android:id="@+id/spinnerTyp"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerCena" />

</RelativeLayout>