<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText14"
        android:text="@string/e_mail"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView14"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="189dp"
        android:text="@string/fiksstawk"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView15"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/prin" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4"
        android:text="@string/admswit"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="128dp"
        android:layout_height="34dp"
        android:layout_alignBottom="@+id/switch2"
        android:layout_toEndOf="@+id/switch2"
        android:text="@string/smienpar"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/nameeM"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView16"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>