<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListZamow">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Acc"
        android:layout_alignParentStart="true"
        android:text="@string/os"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/Summ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:text="@string/_0"
        android:textAlignment="viewStart"
        android:textSize="25sp" />

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:elevation="0dp"
        app:menu="@menu/bottom_navigation_menu" />

    <Button
        android:id="@+id/Acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation_view"
        android:layout_alignParentStart="true"
        android:text="@string/priniatzak" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/ok" />

    <ListView
        android:id="@+id/ListZamow"
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />
</RelativeLayout>