<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="392dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:elevation="4dp"
        app:menu="@menu/bottom_navigation_menu" />

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="fill_parent"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/KofR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="rbcClick"
            android:text="@string/k"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/TeaR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbcClick"
            android:text="@string/t"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/IceR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbcClick"
            android:text="@string/h"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/OthR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbcClick"
            android:text="@string/o"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/AddiR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbcClick"
            android:text="@string/d"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/wodka"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_above="@+id/bottom_navigation_view"
        android:layout_alignParentStart="true"
        android:autoText="true"
        android:text="@string/tekst"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>