<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllDataForm">

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:elevation="0dp"
        app:menu="@menu/bottom_navigation_menu" />

    <ListView
        android:id="@+id/AllList"
        android:layout_width="match_parent"
        android:layout_height="348dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/Show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation_view"
        android:layout_centerHorizontal="true"
        android:text="@string/pokinf" />

    <Button
        android:id="@+id/SendEmail"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Show"
        android:layout_alignParentStart="true"
        android:text="@string/sendotp" />

    <Button
        android:id="@+id/Write"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Show"
        android:layout_alignParentEnd="true"
        android:text="@string/zapdb" />

</RelativeLayout>